add api update vs delete comment
