# controller/comment_services/model/uppdate.comment.model.go
@@ -1,0 +1,6 @@
+package commentmodel
+
+type UpdateComment struct {
+	ID      string `db:"id" json:"-"`
+	Content string `db:"content" json:"content"`
+}
